[workspace]
resolver = "2"
members = [
    "ultima-swap/pumpfun",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ValidatorsDAO/ultima"
publish = false

[workspace.dependencies]
solana-sdk = "2.2"
solana-pubkey = "2.2"
solana-program = "2.2"
solana-rpc-client = "2.2"
spl-token = "7"
spl-token-2022 = "7"
spl-associated-token-account = "6"
borsh = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
