[workspace]
resolver = "2"
members = [
    "ultima-swap/pumpfun",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ValidatorsDAO/ultima"
publish = false

[workspace.dependencies]
solana-pubkey = { version = "3.0", features = ["borsh", "sha2", "curve25519"] }
solana-program = "3.0"
solana-instruction = "3.0"
borsh = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
