[package]
name = "ultima-swap-pumpfun"
description = "PumpSwap AMM SDK — buy/sell on Pump.fun graduated pools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
